--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,11 +3,13 @@
   border-radius: 3px;
   border: none;
   cursor: pointer;
-  background: linear-gradient(90deg, rgb(16, 108, 206), rgb(82, 40, 181));
+  background: #1FA2FF;
   color: rgb(255, 255, 255);
   transition: .4s;
+  outline: none;
+  box-shadow: 0 10px 20px rgba(31, 162, 255, 0.7);
 }
 
 .mk-btn:hover {
-  opacity: .9;
+  box-shadow: 0 5px 10px rgba(31, 162, 255, 0.7);
 }
