fixed types and error handling added

--- a/src/components/Building/Building.css
+++ b/src/components/Building/Building.css
@@ -1,7 +1,17 @@
 .building {
   cursor: not-allowed;
+  fill: url('#buildings');
+  transition: .7s;
 }
 
 .clickable {
   cursor: pointer;
+}
+
+.selected {
+  fill: url('#gradient');
+}
+
+.hovered {
+  opacity: .8;
 }
