--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,4 @@
-.mk-btn {
+.btn {
   padding: 10px 25px;
   border-radius: 3px;
   border: none;
@@ -10,6 +10,46 @@
   box-shadow: 0 10px 20px rgba(31, 162, 255, 0.7);
 }
 
-.mk-btn:hover {
+.btn:hover {
   box-shadow: 0 5px 10px rgba(31, 162, 255, 0.7);
+}
+
+.animated {
+  animation: drag 1s ease-in-out;
+}
+
+@keyframes drag {
+  0% {
+    transform: translateX(-10px);
+  }
+  10% {
+    transform: translateX(9px);
+  }
+  20% {
+    transform: translateX(-8px);
+  }
+  30% {
+    transform: translateX(7px);
+  }
+  40% {
+    transform: translateX(-6px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  60% {
+    transform: translateX(-4px);
+  }
+  70% {
+    transform: translateX(3px);
+  }
+  80% {
+    transform: translateX(-2px);
+  }
+  90% {
+    transform: translateX(1px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
